--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -35,14 +35,15 @@
 @import "../../components/common/NavBar/style/navBar";
 @import "../../components/common/pageCarousel/style/pageCarousel";
 @import "../../components/common/search/style/search";
-@import "../../components/common/newsCard/cardEight/style/cardEight";
+@import "../../components/common/newsCard/style/news-card";
+/* @import "../../components/common/newsCard/cardEight/style/cardEight";
 @import "../../components/common/newsCard/cardFive/style/cardFive";
 @import "../../components/common/newsCard/cardFour/style/cardFour";
 @import "../../components/common/newsCard/cardOne/style/cardOne";
 @import "../../components/common/newsCard/cardSeven/style/cardSeven";
 @import "../../components/common/newsCard/cardSix/style/cardSix";
 @import "../../components/common/newsCard/cardThree/style/cardThree";
-@import "../../components/common/newsCard/cardTwo/style/cardTwo";
+@import "../../components/common/newsCard/cardTwo/style/cardTwo"; */
 @import "../../components/common/articleContainer/style/articleContainer";
 @import "../../components/common/form/textField/textField";
 
