--- a/src/app/components/ui/newsCardContainer/style/_newsCardContainer.scss
+++ b/src/app/components/ui/newsCardContainer/style/_newsCardContainer.scss
@@ -1,4 +1,20 @@
-
+.cards{
+    margin: 20px auto;
+    max-width: 1300px;
+    text-align: center;
+    /* display: flex;
+    margin: 20px auto;
+    flex-wrap: wrap;
+    justify-content: space-around; */
+}
+/* div.cards {
+    
+    text-align: center;
+    
+    max-width: 1300px;
+  }
+ */
+/* 
 .newscard__container { 
     overflow: hidden;
     border-radius: 20px;
@@ -34,3 +50,4 @@
         display: none;
     }
 }
+ */
