--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -74,7 +74,7 @@
   }
 .signBoard__tagline{
     padding: 0px 20px;
-    font-weight: 600;
+   /*  font-weight: 600; */
  
   }
 .header__section3 {
