--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -22,7 +22,7 @@ nav,footer,header,aside{display: block;}
 html,body{
 	height: 100%;
 	width: 100%;
-	font-size: 1.25rem;
+	font-size: 18px;
 	line-height: 1;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
