--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -58,5 +58,6 @@
 @import "../../components/ui/logIn/style/logIn";
 @import "../../components/ui/nav-bar/style/nav-bar";
 @import "../../components/ui/menu-navbar/style/navbar-menu-container";
+@import "../../components/ui/partners-container/style/partners-container";
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
