cadets pages, refactoring

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -45,6 +45,7 @@
 @import "../../components/common/newsCard/cardTwo/style/cardTwo"; */
 @import "../../components/common/articleContainer/style/articleContainer";
 @import "../../components/common/form/textField/textField";
+@import "../../components/common/collapse/style/collapse";
 
 // --------------------ui----------------------------------
 @import "../../components/ui/disabled/style/disabled";
