--- a/src/app/components/common/carousel/style/_carousel.scss
+++ b/src/app/components/common/carousel/style/_carousel.scss
@@ -15,6 +15,23 @@
     }
 }
 .swiperSlideFirs{
+    &__lable{
+        position: absolute;
+        background-color: hsla(207, 63%, 21%, 0.5);
+        z-index: 10;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 14%;
+        padding-top: 10px;
+        &-content{
+           text-align: center;
+           color: white;
+           font-size:x-large;
+           
+        }
+        
+    }
     &__title{
         font-size: 2em;
         position: absolute;
@@ -67,6 +84,7 @@
 .marquee-infinite {
     position: absolute;
     bottom: 0;
+    z-index: 11;
     height: 96px;
     width: 100%;
     overflow: hidden;
@@ -76,7 +94,7 @@
         width: 100%;
         display: flex;
         justify-content:left;
-        animation: marquee-infinite 5.4s linear infinite;
+        animation: marquee-infinite 5.3s linear infinite;
     }
     img {
         height: 96px;
