--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -60,5 +60,7 @@
 @import "../../components/ui/nav-bar/style/nav-bar";
 @import "../../components/ui/menu-navbar/style/navbar-menu-container";
 @import "../../components/ui/partners-container/style/partners-container";
+@import "../../components/ui/left-panel/style/left-panel";
+@import "../../components/ui/scroll-up/style/scroll-up";
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
