--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -66,7 +66,7 @@
 .header__section2 {
     display: flex;
     align-items: center;
-    margin: 10px;
+    padding: 10px;
   }
 .signBoard__logo{
     min-width: 380px;
