--- a/src/app/components/ui/left-panel/style/_left-panel.scss
+++ b/src/app/components/ui/left-panel/style/_left-panel.scss
@@ -6,4 +6,94 @@
     width: 5%;
     height: 100vh;
     z-index: 100;
+    &-moove{
+        position: absolute;
+        left:100%;
+        max-width: 0px;
+        transition: max-width 0.5s ease-in;
+        overflow: hidden;
+        background-color: white;
+       
+        -webkit-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+        box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+        height: 100vh;
+        z-index: 100;
+        &-links{
+            margin-top: 5px;
+            height: 30%;
+            .links__container{
+                min-width: 420px;
+                height: 15.5%;
+                margin-bottom: 4.2%;
+                border-bottom: solid 1px $MAIN_COLOR;
+                margin-left:  10px;
+                a{
+                    color: $MAIN_COLOR;
+                }
+            }
+            .links__container-active{
+                border-bottom: solid 1px $RED_COLOR;
+            }
+        }
+        &-top{
+            height: 70%;
+            div{
+                height: 10vh;
+                text-align: center;
+                color: $MAIN_COLOR;
+                padding: 10px;
+                width: 400px;
+                font-size: 30px;
+                margin-left: 10px;
+               
+                overflow: hidden;
+          
+                border-bottom: solid 1px #8090be77;
+            }
+        }
+    }   
+    &-static{
+        
+        bottom: 0;
+        height: 100%;
+        &-top{
+            height: 70%;
+            div{
+                height: 10vh;
+                padding: 10px;
+                opacity: 1;
+                border-bottom: solid 1px #8090bec3;
+            }
+        }
+        &-icons{
+            height: 30%;
+        }
+        .icon__container{
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+            padding: 10%;
+            align-items: center;
+          
+            height: 15%;
+            border: solid 1px #8090bec3;
+            border-radius: 50%;
+            background-color: #152C42;
+            margin-bottom: 29%;
+            margin-left: 15%;
+            margin-right: 15%;
+
+        }
+        
+        .icon__container:hover{
+            background-color: #8090bec3;
+        }
+    }
+}
+
+.isShow{
+    max-width: 500px;
+    transition: max-width 0.5s ease-in;
 }
