--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -1,201 +1,132 @@
 @import "../../../../style/variables";
 @import "../../../../style/mixins/response-mixins.scss";
 
-.header {
-    background-color: $MAIN_COLOR;  
-    justify-content: space-between;
-    width: 100%;
-    color: $FONT_COLOR;
-    @include desktop{
-      display: none;
-    }
-    a {
-      color: inherit;
-       }
-  }
-.header-white{
-    width: 100%;
-    justify-content: space-between;
-    background-color: $BACK_WHITE;
-    color: $DISABLED_FONT_COLOR;
-    @include desktop {
-      display: none;
-    }
-    a {
-      color: inherit;
-       }
 
-  }
-.header-black{
-    width: 100%;
-    justify-content: space-between;
-    background-color: $BACK_BLACK;
-    color: $WHITE_FONT_COLOR;
-    @include desktop {
-      display: none;
-    }
-    a {
-      color: inherit;
-       }
-  }
-.header-contrast{
-    width: 100%;
-    justify-content: space-between;
-    background-color: $BACK_CONTRAST;
-    color: $FONT_CONTRAST;
-    @include desktop {
-      display: none;
-    }
-    a {
-      color: inherit;
-       }
-  }
+#navBar{
+  position: fixed;
+  background-color: $MAIN_COLOR;
+  z-index: 10;
+  height: 10vh;
+  width: 95%;
+  left: 5%;
+  top: 0;
+  transition: top 0.2s;
+}
+.header{
+  
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  left: 5%;
+  z-index: 100;
+  padding: 0 10px;
+  
 
+   &-title{
+    width: 23%;
+    font-size: 14px;
+    line-height: 1rem;
+    a{
+      color: white;
+    }
+  } 
+  &-menu{
+   width: 77%;
+   height: 100%;
+    ul{
+      a{
+        color: white;
+      }
+      display: flex;
+      font-size: 16px;
+      height: 100%;
+      align-items: center;
+      justify-content: space-around; 
+      color: white;
+      margin: 0;
+      padding: 0;
+      li{
+        cursor: pointer;
+        height: 80%;
+        padding: 0 10px;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+  
+}
 
-.header__section1 {
-    border-bottom: solid 2px $MAIN_COLOR;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-  }
-.header__item.headerName {
-    width: 40%;
-    padding-bottom: 10px;
-  }
-.header__section2 {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-  }
-.signBoard__logo{
-    min-width: 380px;
-    padding: 0px 140px;
-  }
-.signBoard__tagline{
-    padding: 0px 20px;
-   /*  font-weight: 600; */
+//выпадающее меню
+.navbar__menu-container{
+  position: absolute;
+  opacity: 1;
+  bottom: -210px;
+  width: 95%;
+  left:50%;
+  transform:translate(-50%);
+  display: none;
+  z-index: 11;
+  display: none;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  -moz-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  ul{
+   
+    a{
+   
+      color: $LINK_COLOR;
+    }
+  
  
-  }
-.header__section3 {
-    display: flex;
-    padding-top: 10px;
-    align-items: center;
-    justify-content: space-between;
-      
-  }	
-.header__section3-btn-margin {
-    margin: 0px  0px 0px 5px;
-  }
-.header__section3-link {
-    display: flex;
-  }
-.header__section3-btn {
-    display: flex;    
-  }
-hr.redline {
-    background-color: $RED_COLOR;
-    height: 1px;
-    margin: 4px 0px;
-    padding: 0px;
-}
-.icon {
-  margin-right: 3px;
-   }
-  
-  /* ---------------------------------Кнопка входа в личный кабинет---------------------------------------------- */
- 
-
-.btn__office-text{
-  vertical-align: middle;
-  font-size: 0.625rem;
-  
-}
-.btn__office {
-  background-color:$RED_COLOR;
-  color: $FONT_COLOR;
-}
-.btn__office-white {
-  background-color:$BACK_WHITE;
-  color: $DISABLED_FONT_COLOR;
-  border: solid 1px $DISABLED_FONT_COLOR;
-}
-.btn__office-black {
-  background-color:$BACK_BLACK;
-  color: $WHITE_FONT_COLOR;
-  border: solid 1px $WHITE_FONT_COLOR;
-}
-.btn__office-contrast {
-  background-color:$BACK_CONTRAST;
-  color: $FONT_CONTRAST;
-  border: solid 1px $FONT_CONTRAST;
-}
-.btn__office:hover {
-  box-shadow: inset 0px 0px 5px rgba(0,0,0,0.9);
-  font-weight: 500;
-}
-/* -------------Календарь */
-.btn__timetable {
-  background-color: $BACK_TIMETABLE_COLOR;
-  color: $TIMETABLE_COLOR;
-}
-.btn__timetable-white {
-  background-color: $BACK_WHITE;
-  color: $DISABLED_FONT_COLOR;
-  border: solid 1px $DISABLED_FONT_COLOR;
-}
-.btn__timetable-black {
-  background-color: $BACK_BLACK;
-  color: $WHITE_FONT_COLOR;
-  border: solid 1px $WHITE_FONT_COLOR;
-}
-.btn__timetable-contrast {
-  background-color: $BACK_CONTRAST;
-  color: $FONT_CONTRAST;
-  border: solid 1px $FONT_CONTRAST;
-}
-.btn__timetable.icon:hover {
-  color: #ffffff;
 }
 
-.btn__timetable:hover {
-  box-shadow: inset 0px 0px 5px rgba(0,0,0,0.9);
-  font-weight: 500;
 }
-
-  .header__office {
-    position: relative;   
-    }
- 
-  .text__underlined {
-    border-bottom: solid 1px;
-    margin-top: 2px;
+.navbar__menu-item{
+  margin-top: 25px;
+  width:100%;
+  min-height: 200px;
+  padding: 25px;
+  background-color: white;
+  opacity: 1;
+  display: none;
+  ul{
+      padding: 0;
+      color: $LINK_COLOR;
+      justify-content: space-around;
+      li{
+          width: calc(100%/3);
+          float: left;
+          padding-top: 15px;
+          text-align: center;
+          border-bottom: solid 2px white;
+          padding-bottom: 4px;
+      }
+      li:before {
+          content: "";
+          display: inline-block;
+          height: 100%;
+          vertical-align: middle;
+     }
+      li:hover{
+          border-bottom: solid 2px $RED_COLOR;
+          background-color:rgba(12, 29, 44, 0.05);
+          cursor: pointer;
+          padding-bottom: 4px;
+      }
   }
-  .header__link {
-    margin: 10px;
-    &-pointer{
-      cursor: pointer;
-    }
+}
+.show-menu-item{
+  display: block;
+}
+.show-menu-container{
+  display: block;
+}
+.show-menu-list{
+  a{
+    color: $MAIN_COLOR !important;
   }
-  
-  
-/* -------------------menuNavbar-------------------------------------- */
-  
-.header__navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  color: $MAIN_COLOR;
+  background-color: white;
 }
-.header__item {
-
-    text-align: center;
-
-}
-.headerButton{
-    max-width: 110px;
-    margin: 0.5em;
-}
-
-  
-  
