--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -92,13 +92,15 @@ li{
 }
 
 .app__wrapper{
-
 	&-leftPanel{
 		width: 5%;
 	}
+	
 	&-main{
 		position: absolute;
 		width: 95%;
 		left: 5%;
+		top: 10%;
+
 	}
 }
