--- a/src/app/components/ui/left-panel/style/_left-panel.scss
+++ b/src/app/components/ui/left-panel/style/_left-panel.scss
@@ -3,9 +3,13 @@
     position: fixed;
     background-color: $MAIN_COLOR;
     left: 0;
-    width: 5%;
+    width: 4%;
     height: 100vh;
     z-index: 100;
+    a{
+        color: $MAIN_COLOR;
+    }
+
     &-moove{
         position: absolute;
         left:100%;
@@ -13,24 +17,26 @@
         transition: max-width 0.5s ease-in;
         overflow: hidden;
         background-color: white;
-       
         -webkit-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
         -moz-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
         box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
         height: 100vh;
         z-index: 100;
+  
         &-links{
             margin-top: 5px;
             height: 30%;
             .links__container{
                 min-width: 420px;
-                height: 15.5%;
-                margin-bottom: 4.2%;
+                height: 21%;
+                display: flex;
+                align-items: center;
                 border-bottom: solid 1px $MAIN_COLOR;
                 margin-left:  10px;
                 a{
                     color: $MAIN_COLOR;
                 }
+
             }
             .links__container-active{
                 border-bottom: solid 1px $RED_COLOR;
@@ -40,10 +46,10 @@
             height: 70%;
             div{
                 height: 10vh;
-                text-align: center;
+                text-align: center; 
                 color: $MAIN_COLOR;
-                padding: 10px;
-                width: 400px;
+                padding: 10px; 
+                width: 400px; 
                 font-size: 30px;
                 margin-left: 10px;
                
@@ -70,30 +76,39 @@
             height: 30%;
         }
         .icon__container{
-            cursor: pointer;
             display: flex;
+            padding: 3px;
             justify-content: center;
             margin: 0 auto;
-            padding: 10%;
-            align-items: center;
+            height: 21%;
+            margin-bottom: 2%;
+            margin-top: 2%;
+            :first-child{
+                cursor: pointer;
+            }
+        
           
-            height: 15%;
-            border: solid 1px #8090bec3;
-            border-radius: 50%;
-            background-color: #152C42;
-            margin-bottom: 29%;
-            margin-left: 15%;
-            margin-right: 15%;
 
         }
-        
-        .icon__container:hover{
-            background-color: #8090bec3;
-        }
+       
     }
 }
 
 .isShow{
-    max-width: 500px;
+    max-width: 400px;
     transition: max-width 0.5s ease-in;
+}
+.leftPanel__wrapper-moove-disabled{
+    position: absolute;
+    left:100%;
+    width: 30vh;
+    transition: max-width 0.5s ease-in;
+    overflow: hidden;
+    background-color: rgb(234, 67, 67);
+    -webkit-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 4px 0px 8px 0px rgba(34, 60, 80, 0.2);
+    height: 100vh;
+    z-index: 101;
+
 }
