--- a/src/app/components/ui/disabled/style/_disabled.scss
+++ b/src/app/components/ui/disabled/style/_disabled.scss
@@ -1,8 +1,8 @@
 @import "../../../../style/variables";
 .header__section-disabled{
     background-color: $DISABLED;
-    display: flex;
-    height: 80px;
+    
+    height: 100%;
     align-items: center;
     font-size: 1.2rem;
     color: $DISABLED_FONT_COLOR;
@@ -11,9 +11,14 @@
 
 .disabled__container{
     display: flex;
-    margin: 20px;
+    justify-content: space-between;
+    margin: 10% 2%;
+    width: 384px;
+
    
     &-back{
+        width: 100%;
+        text-align: center;
         border: solid 2px #000;
         padding: 0.3em;
         cursor: pointer;
