--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -130,3 +130,10 @@
   color: $MAIN_COLOR;
   background-color: white;
 }
+
+@media screen and (max-width:1270px){
+  #navBar{
+    display: none;
+    left: 0;
+  }
+}
