--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -104,3 +104,19 @@ li{
 
 	}
 }
+@media screen and (max-width:1270px) {
+	.app__wrapper{
+		&-leftPanel{
+			display: none;
+			width: 0;
+		}
+		
+		&-main{
+			position:static;
+			width: 100%;
+			left: 0%;
+			top: 0%;
+	
+		}
+	}
+}
