--- a/src/app/components/page/schedule/style/_schedule.scss
+++ b/src/app/components/page/schedule/style/_schedule.scss
@@ -1,6 +1,6 @@
 @import "../../../../style/variables";
 .schedule__container{
-    position: absolute;
+    position: fixed;
     z-index: 100;
     top: 0;
     width: 100%;
