--- a/src/app/components/common/infoContainer/style/_infoContainer.scss
+++ b/src/app/components/common/infoContainer/style/_infoContainer.scss
@@ -4,7 +4,7 @@
     display: flex;
     padding: 20px 20px;
     justify-content: space-between;
-    font-size: 1rem;
+
 }
 .infocontainer__titile{
     color: $ACTIV_LINK_COLOR;
@@ -57,7 +57,7 @@ button.infocontainer__button{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    font-size: 1rem;
+  /*   font-size: 1rem; */
     padding: 20px 0px;
 }
 
