--- a/src/app/components/ui/left-panel/style/_left-panel.scss
+++ b/src/app/components/ui/left-panel/style/_left-panel.scss
@@ -9,7 +9,6 @@
     a{
         color: $MAIN_COLOR;
     }
-
     &-moove{
         position: absolute;
         left:100%;
@@ -95,6 +94,90 @@
     }
 }
 
+.leftPanel__wrapper-white{
+    background-color: white;
+    a{
+        color: black;
+    }
+    .leftPanel__wrapper-moove{
+        background-color: white;
+        &-links{
+            .links__container{
+                border-bottom: solid 1px black;
+                cursor: pointer;
+                color: black;
+                a{
+                    color: black;
+                }
+            }
+            .links__container-active{
+                border-bottom: solid 1px $RED_COLOR;
+            }
+        }
+        &-top{
+            div{
+                color: black; 
+            }
+        }
+    }   
+}
+
+.leftPanel__wrapper-black{
+    background-color: black;
+    a{
+        color: white;
+    }
+    .leftPanel__wrapper-moove{
+        background-color: black;
+        &-links{
+            .links__container{
+                border-bottom: solid 1px white;
+                cursor: pointer;
+                color: white;
+                a{
+                    color: white;
+                }
+            }
+            .links__container-active{
+                border-bottom: solid 1px $RED_COLOR;
+            }
+        }
+        &-top{
+            div{
+                color: white; 
+            }
+        }
+    }   
+}
+
+.leftPanel__wrapper-contrast{
+    background-color: $BACK_CONTRAST;
+    a{
+        color: $FONT_CONTRAST;
+    }
+    .leftPanel__wrapper-moove{
+        background-color: $BACK_CONTRAST;
+        &-links{
+            .links__container{
+                border-bottom: solid 1px $FONT_CONTRAST;
+                cursor: pointer;
+                color: $FONT_CONTRAST;
+                a{
+                    color: $FONT_CONTRAST;
+                }
+            }
+            .links__container-active{
+                border-bottom: solid 1px $RED_COLOR;
+            }
+        }
+        &-top{
+            div{
+                color: $FONT_CONTRAST; 
+            }
+        }
+    }   
+}
+
 .isShow{
     max-width: 400px;
     transition: max-width 0.5s ease-in;
@@ -122,6 +205,7 @@
             width: max-content;
             padding: 0.3em;
             font-size: 22px;
+            cursor: pointer;
         }
     }
 
