--- a/src/app/components/ui/left-panel/style/_left-panel.scss
+++ b/src/app/components/ui/left-panel/style/_left-panel.scss
@@ -60,7 +60,6 @@
         }
     }   
     &-static{
-        
         bottom: 0;
         height: 100%;
         &-top{
@@ -183,9 +182,7 @@
     transition: max-width 0.5s ease-in;
 }
 .leftPanel__wrapper-moove-disabled{
-    
     display: none;
-    
     width: 100%;
     transition: max-width 0.5s ease-in;
     overflow: hidden;
@@ -208,14 +205,61 @@
             cursor: pointer;
         }
     }
-
 }
+.leftPanel__wrapper-moove-login{
+    display: none;
+    width: 100%;
+    overflow: hidden;
+    background-color: white;
+    height: 100vh;
+    z-index: 101;
+    &-form{
 
+        height: 40%;
+        padding: 3%;
+        h1{
+            text-align: center;
+        }
+        .login_form-btnLogin{
+            width: 100%;
+            border-radius: 2px;
+        }
+        .login_form-inputWrapper-input{
+
+            border-bottom: solid 1px $MAIN_COLOR;
+            color: $MAIN_COLOR;
+            
+        }
+        .login_form-inputWrapper-input::placeholder{
+            color: $MAIN_COLOR;
+            font-size: 16px;
+        }
+        .login_form-btnLogin{
+          
+        }
+    }
+    &-top{
+        height: 60%;
+        div{
+            height: 10vh;
+            text-align: center; 
+            color: $MAIN_COLOR;
+            padding: 10px; 
+            width: 400px; 
+            font-size: 30px;
+            margin-left: 10px;
+            overflow: hidden;
+            border-bottom: solid 1px #8090be77;
+        }
+    }
+}
 
 .leftPanel__wrapper-moove-disabled-show{
     display: block;
 }
-
+.leftPanel__wrapper-moove-login-show{
+    display: block;
+}
 @media screen and (max-width:1270){
     .leftPanel__wrapper{
         position: static;
