--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -182,7 +182,7 @@
           vertical-align: middle;
      }
       li:hover{
-          border-bottom: solid 2px black;
+          border-bottom: solid 2px $RED_COLOR;
           background-color:rgba(12, 29, 44, 0.05);
           cursor: pointer;
           padding-bottom: 4px;
