--- a/src/app/components/ui/left-panel/style/_left-panel.scss
+++ b/src/app/components/ui/left-panel/style/_left-panel.scss
@@ -196,7 +196,7 @@
         width: 384px;
         margin: 5% 2%;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         div{
             border: solid 2px #000;
             width: max-content;
@@ -234,9 +234,7 @@
             color: $MAIN_COLOR;
             font-size: 16px;
         }
-        .login_form-btnLogin{
-          
-        }
+
     }
     &-top{
         height: 60%;
