--- a/src/app/components/ui/partners-container/style/_partners-container.scss
+++ b/src/app/components/ui/partners-container/style/_partners-container.scss
@@ -39,3 +39,84 @@
         }
     }
 }
+.partners-white{
+    color: black;
+    h3{ 
+        border-bottom: solid 2px black;
+    }
+    .partners_container{
+        a{
+            .partners_container-item{
+                h4{
+                    color: black;
+                }
+                img{
+                    filter: grayscale(1);
+                }
+            }
+            .partners_container-item:hover{
+                img{
+                    filter: grayscale(1);
+                }
+                h4{
+                    color: black;
+                }
+                
+            }
+        }
+    }
+}
+.partners-black{
+    color: white;
+    h3{ 
+        border-bottom: solid 2px white;
+    }
+    .partners_container{
+        a{
+            .partners_container-item{
+                h4{
+                    color: white;
+                }
+                img{
+                    filter: grayscale(1);
+                }
+            }
+            .partners_container-item:hover{
+                img{
+                    filter: grayscale(1);
+                }
+                h4{
+                    color: white;
+                }
+                
+            }
+        }
+    }
+}
+.partners-contrast{
+    color: $FONT_CONTRAST;
+    h3{ 
+        border-bottom: solid 2px $FONT_CONTRAST;
+    }
+    .partners_container{
+        a{
+            .partners_container-item{
+                h4{
+                    color: $FONT_CONTRAST;
+                }
+                img{
+                    filter: grayscale(1);
+                }
+            }
+            .partners_container-item:hover{
+                img{
+                    filter: grayscale(1);
+                }
+                h4{
+                    color: $FONT_CONTRAST;
+                }
+                
+            }
+        }
+    }
+}
