--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -24,8 +24,8 @@
     width: 23%;   
     font-size: 14px;
      line-height: 1rem;
-/*     font-size: 1.5vh;
-    line-height: 1.8vh; */
+    font-size: 1vw;
+    line-height: 1.1vw;
     a{
       color: white;
     }
@@ -39,7 +39,7 @@
       }
       display: flex;
       font-size: 16px;
-   /*    font-size: 2vh; */
+      font-size: 1vw; 
       height: 100%;
       align-items: center;
       justify-content: space-around; 
@@ -120,9 +120,9 @@
   display: none;
   z-index: 11;
   display: none;
-  -webkit-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+/*   -webkit-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
   -moz-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
-  box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2); */
   ul{
     a{
       color: $LINK_COLOR;
@@ -166,6 +166,9 @@
   background-color: white;
   opacity: 1;
   display: none;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  -moz-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
+  box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
   ul{
       padding: 0;
       color: $LINK_COLOR;
