--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -165,7 +165,7 @@
   padding: 25px;
   background-color: white;
   opacity: 1;
- /*  display: none; */
+  display: none; 
   -webkit-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
   -moz-box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
   box-shadow: 0px 4px 8px 0px rgba(20, 49, 71, 0.2);
