--- a/src/app/components/page/schedule/style/_schedule.scss
+++ b/src/app/components/page/schedule/style/_schedule.scss
@@ -1,30 +1,38 @@
 @import "../../../../style/variables";
-.schedule__container{
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $MENU_COLOR;
-    color: white;
-   
-   
+.schedule__container {
+  position: absolute;
+  z-index: 11;
+  top: 0;
+  width: 100%;
+  height: 2000px;
+  background-color: $MENU_COLOR;
+  color: white;
 }
-.schedule__wrapper{
-    max-width: 900px;
-    margin: 0px auto; /*выравнивает контейнер по середине (для ограниченных по ширине блоков)*/
-    box-sizing: content-box;
-    padding: 15px;
-    &-btn-container{
-        display: flex;
-        justify-content: space-between;
-        button{
-            background-color: $MENU_COLOR;
-            color: white;
-            border: solid 2px white;
-            border-radius: 0.5em;
-            padding: 0.5em 1em;
-
-        }
+.schedule__wrapper {
+  max-width: 900px;
+  margin: 0px auto; /*выравнивает контейнер по середине (для ограниченных по ширине блоков)*/
+  box-sizing: content-box;
+  padding: 15px;
+  &-btn-container {
+    display: flex;
+    justify-content: space-between;
+    button {
+      background-color: $MENU_COLOR;
+      color: white;
+      border: solid 2px white;
+      border-radius: 0.5em;
+      padding: 0.5em 1em;
     }
+  }
+  ul {
+    margin: 20px 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    li {
+      width: 200px;
+      margin: 10px;
+    }
+  }
 }
