--- a/src/app/components/ui/nav-bar/style/_nav-bar.scss
+++ b/src/app/components/ui/nav-bar/style/_nav-bar.scss
@@ -3,13 +3,18 @@
 
 #navBar {
   position: fixed;
-  background-color: $MAIN_COLOR;
+  background-color: rgb(250, 250, 250);
+
   z-index: 12;
+  font-weight: 600;
   height: 10vh;
   width: 96%;
   left: 4%;
   top: 0;
   transition: top 0.2s;
+  -webkit-box-shadow: 0px 2px 10px -7px rgba(12, 28, 43, 0.81);
+  -moz-box-shadow: 0px 2px 10px -7px rgba(12, 28, 43, 0.81);
+  box-shadow: 0px 2px 10px -7px rgba(12, 28, 43, 0.81);
 }
 .header {
   display: flex;
@@ -26,7 +31,7 @@
     font-size: 1vw;
     line-height: 1.1vw;
     a {
-      color: white;
+      color: $MAIN_COLOR;
     }
   }
   &-menu {
@@ -34,15 +39,16 @@
     height: 100%;
     ul {
       a {
-        color: white;
+        color: $MAIN_COLOR;
       }
+
       display: flex;
       font-size: 16px;
       font-size: 1vw;
       height: 100%;
       align-items: center;
       justify-content: space-around;
-      color: white;
+      color: $MAIN_COLOR;
       margin: 0;
       padding: 0;
       li {
@@ -51,6 +57,7 @@
         padding: 0 10px;
         display: flex;
         align-items: center;
+        border-bottom: solid 2px rgb(250, 250, 250);
       }
     }
   }
@@ -69,6 +76,7 @@
       color: black;
       li {
         border: solid 1px black;
+        border-bottom: solid 2px black;
       }
     }
   }
@@ -86,6 +94,7 @@
       color: white;
       li {
         border: solid 1px white;
+        border-bottom: solid 2px white;
       }
     }
   }
@@ -103,6 +112,7 @@
       color: $FONT_CONTRAST;
       li {
         border: solid 1px $FONT_CONTRAST;
+        border-bottom: solid 2px $FONT_CONTRAST;
       }
     }
   }
@@ -234,8 +244,9 @@
   a {
     color: $MAIN_COLOR !important;
   }
-  color: $MAIN_COLOR;
-  background-color: white;
+  border-bottom: solid 2px $RED_COLOR !important;
+  /* color: $MAIN_COLOR;
+  background-color: white; */
 }
 
 @media screen and (max-width: 1270px) {
