feat: Реализовал фильтрацию новостей по разделам

--- a/src/app/components/ui/newsCardContainer/style/_newsCardContainer.scss
+++ b/src/app/components/ui/newsCardContainer/style/_newsCardContainer.scss
@@ -1,12 +1,12 @@
-.cards{
-    margin: 20px auto;
+/* .cards { */
+/* margin: 20px auto;
     max-width: 1300px;
-    text-align: center;
-    /* display: flex;
+    text-align: center; */
+/* display: flex;
     margin: 20px auto;
     flex-wrap: wrap;
     justify-content: space-around; */
-}
+/* } */
 /* div.cards {
     
     text-align: center;
