--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -53,6 +53,7 @@
 @import "../../components/ui/partners-container/style/partners-container";
 @import "../../components/ui/left-panel/style/left-panel";
 @import "../../components/ui/scroll-up/style/scroll-up";
+@import "../../components/ui/newsCardsWrapper/style/news-cards-wrapper";
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
 @import "../../layouts/auth/style/auth-left-panel";
