feat: Реализовал компонет пагинации
Добавил пагинацию на страницы новостей, также реаливана смена темы пагинации

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -39,6 +39,7 @@
 @import "../../components/common/articleContainer/style/articleContainer";
 @import "../../components/common/form/textField/textField";
 @import "../../components/common/collapse/style/collapse";
+@import "../../components/common/pagination/style/pagination";
 
 // --------------------ui----------------------------------
 @import "../../components/ui/disabled/style/disabled";
